[package]
name = "pnet_packets"
version = "0.1.0"
authors = ["Linus Färnstrand <faern@faern.net>"]
build = "build.rs"

[dependencies.pnet]
git = "https://github.com/libpnet/libpnet"

[features]
default = ["with-syntex"]
nightly = ["pnet_macros_plugin"]
with-syntex = ["syntex", "pnet_macros/with-syntex"]

[dependencies.clippy]
optional = true
version = ">=0.0"

[dependencies.libc]
version = "=0.1.12"

[dependencies.syntex]
version = "=0.26.0"
optional = true

[dependencies.pnet_macros]
optional = true
default-features = false
features = []
version = ">=0.7"

[dependencies.pnet_macros_plugin]
optional = true
version = ">=0.1"

[dependencies.pnet_macros_support]
version = ">=0.1"

[dev-dependencies]
time = ">=0.1"

[build-dependencies]
syntex = { version = "=0.26.0", optional = true }
pnet_macros = { version = ">=0.6" }
